force-app/main/default/objects/PermissionsTemplate__c/PermissionsTemplate__c.object-meta.xml
<CustomObject>
    <description>It contains all the template details for the permissions manager</description>
    <label>PermissionsTemplate</label>
    <nameField>
        <label>PermissionsTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PermissionsTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>