force-app/main/default/objects/PermissionsTemplate__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>LicenseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>