force-app/main/default/objects/PermissionsTemplate__c/fields/PermissionSets__c.field-meta.xml
<CustomField>
    <fullName>PermissionSets__c</fullName>
    <label>PermissionSets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>