force-app/main/default/objects/PermissionsTemplate__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <label>Profiles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>