force-app/main/default/objects/PermissionsTemplate__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description>Comma-separated list of selected user IDs for the template</description>
    <label>Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>